--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.2</version>
+        <version>2.7.10</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.example</groupId>
-    <artifactId>SpringBootSOAP</artifactId>
+    <groupId>com.soap</groupId>
+    <artifactId>SpringBootSoap</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SpringBootSOAP</name>
-    <description>SpringBootSOAP</description>
+    <name>SpringBootSoap</name>
+    <description>Spring Boot Soap Client</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -20,6 +20,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web-services</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
         </dependency>
 
         <dependency>
@@ -32,12 +37,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
         </dependency>
     </dependencies>
 
@@ -59,12 +58,9 @@
                         </goals>
                     </execution>
                 </executions>
-
-                <!--Configuración para archivo url -->
-
                 <configuration>
                     <schemaLanguage>WSDL</schemaLanguage>
-                    <generateDirectory>${project.basedir}/src/main/java/</generateDirectory>
+                    <generateDirectory>${project.basedir}/src/main/java</generateDirectory>
                     <generatePackage>com.soap.wsdl</generatePackage>
                     <schemas>
                         <schema>
@@ -73,18 +69,18 @@
                     </schemas>
                 </configuration>
 
-                <!--Configuración para archivo físico
-                <configuration>
-                    <schemaLanguage>WSDL</schemaLanguage>
-                    <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
-                    <schemas>
-                        <schemaFiles>GlobalWeather.wsdl</schemaFiles>
-                        <packageName>com.example.springbootsoap</packageName>
-                        <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
-                    </schemas>
-                </configuration>
-                -->
+                <!--	Confioguracion para archivos WSDL fisicos-->
+                <!--				<configuration>-->
+                <!--					<schemaLanguage>WSDL</schemaLanguage>-->
+                <!--					<schemaDirectory>${project.basedir}/src/main/resources/wsdl</schemaDirectory>-->
+                <!--					<schemas>-->
+                <!--						<schemaFiles>CalculatorApi.wsdl</schemaFiles>-->
+                <!--						<packageName>com.soap.wsdl</packageName>-->
+                <!--						<outputDirectory>${project.basedir}/src/main/java</outputDirectory>-->
+                <!--					</schemas>-->
+                <!--				</configuration>-->
             </plugin>
         </plugins>
     </build>
+
 </project>
